# include_pipeline

./: Cargo.toml  README.md
assets/shaders/: gradient_triangle.wgsl
src/: gradient_triangle.rs  lib.rs  main.rs
