[package]
name = "include_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = {version = "22", features = ["spirv"]}
naga = {version = "22", features = ["wgsl-out", "spv-in", "wgsl-in"]}
env_logger = "0.10"
bytemuck = { version = "1.12", features = [ "derive" ] }
log = "0.4"

winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.3"