[package]
name = "include_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = {version = "23", features = ["spirv"]}
naga = {version = "23", features = ["wgsl-out", "spv-in", "wgsl-in"]}
env_logger = "0.11"
bytemuck = { version = "1.12", features = [ "derive" ] }
log = "0.4"
clippers = "0.1.2"

winit = { version = "0.30", features = ["rwh_05"] }
pollster = "0.4"